fixed animation glitch with hidden class before visible

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,10 @@ img {
   }
 } */
 
+.hidden {
+  opacity: 0;
+}
+
 @media screen and (min-width: 800px) {
   body {
     font-size: 15px;
